Bug 1326433 - Port bug 1323683 to mailnews: Remove nsIURIWithQuery and implement {Get|Set}FilePath and {Get|Set}Query. r=jorgk CLOSED TREE Base was patch from :Paenglab.