mailnews/jsaccount/src/JaUrl.cpp
@@ -132,7 +132,6 @@ NS_IMPL_ISUPPORTS(JaCppUrlDelegator::Super,
                   nsIMsgMailNewsUrl,
                   nsIMsgMessageUrl,
                   nsIURI,
-                  nsIURIWithQuery,
                   nsIURL,
                   nsIInterfaceRequestor)
 
@@ -169,7 +168,6 @@ NS_IMETHODIMP JaCppUrlDelegator::SetJsDelegate(nsISupports *aJsDelegate)
   mJsISupports = aJsDelegate;
   mJsIMsgMailNewsUrl = do_QueryInterface(aJsDelegate);
   mJsIURI = do_QueryInterface(aJsDelegate);
-  mJsIURIWithQuery = do_QueryInterface(aJsDelegate);
   mJsIURL = do_QueryInterface(aJsDelegate);
   mJsIMsgMessageUrl = do_QueryInterface(aJsDelegate);
   mJsIInterfaceRequestor = do_QueryInterface(aJsDelegate);
